# Noctis-Script

./: CMakeLists.txt  LICENSE  README.md  test.txt
noctis_script/: CMakeLists.txt
noctis_script/include/ncsc/: ast_node.hpp  bytecode.hpp  compiler.hpp  error.hpp  function.hpp  garbage_collector.hpp  instructions.hpp  lexer.h  lexer.hpp  named_utils.hpp  ncsc.hpp  object.hpp  optimizer.hpp  parser.h  parser.hpp  scope.hpp  script.hpp  script_context.hpp  script_function.hpp  script_node.hpp  script_object.hpp  script_source.hpp  syntax_error.hpp  token.h  token.hpp  type_info.hpp  value.hpp  value_type.hpp  variable.hpp  vm.hpp
noctis_script/src/: ast_node.cpp  bytecode.cpp  compiler.cpp  error.cpp  function.cpp  garbage_collector.cpp  instructions.cpp  lexer.cpp  optimizer.cpp  parser.cpp  scope.cpp  script.cpp  script_context.cpp  script_node.cpp  script_object.cpp  script_source.cpp  syntax_error.cpp  token.cpp  type_info.cpp  value.cpp  value_type.cpp  vm.cpp
noctis_script/tests/: compiler_tests.cpp  lexer_tests.cpp  parser_tests.cpp  value_type_tests.cpp
noctis_script/tests/scripts/: functions_compiler.ncsc  incs_decs.ncsc  variable_declaration_comp.ncsc  variables_compiler.ncsc
test/: CMakeLists.txt  code.ncsc  main.cpp  main_gc_tests.cpp
